# experimental

./: .gitignore  readme.org
experiments/b2/: readme.org
experiments/b2/src/: rt.xprl
experiments/bootstrap/: Manifest.toml  Project.toml  readme.org
experiments/bootstrap/src/: env.jl  eval.jl  gen.jl  primitives.jl  read.jl  repl.jl  rt.jl  xprl.jl
experiments/bootstrap/src/xprl/: core.clj
experiments/bootstrap/xprl/: core.xprl  interpreter.xprl  reader.xprl  temp.xprl  test.xprl
experiments/clj-llvm/: deps.edn  readme.org
experiments/clj-llvm/llvm/: Makefile  example.c  example.ll
experiments/clj-llvm/src/lang/: core.clj  demo.clj  ir.clj  ir_types.clj  (+3 more)
experiments/clj-vulkan/: .gitignore  deps.edn  readme.org
experiments/clj-vulkan/llvm/: Makefile  vulkan.c
experiments/fractals/: deps.edn  dev.cljs.edn
experiments/gas/: hello.s
experiments/host-evaluation/: readme.org
experiments/host-evaluation/julia/: Manifest.toml  Project.toml
experiments/host-evaluation/rust/: Cargo.toml  readme.org
experiments/rrepl/src/: main.rs
experiments/self-hosted/: readme.org
experiments/self-hosted/src/: buzz.xprl  core.xprl  cps.xprl  emit-wire.xprl  fexpr.xprl  harmonic-mean-cps.xprl  harmonic-mean-example.xprl  high-level-structure.xprl  primitives.xprl  reader.xprl  repl.xprl  streams.xprl  take1.xprl  types.xprl  vm.xprl
experiments/xprl/: readme.org
experiments/xprl/impl/: Manifest.toml  Project.toml
experiments/xprl/src/: emission-example.xprl  executor.xprl  nonprimitive-lambda.xprl  rt.xprl  scratch-1.xprl  scratch-2.xprl  types.xprl
(+37 files in other folders)
