[package]
name = "rrepl"
description = " All I want is a repl"
readme = "readme.org"
version = "0.1.0"
authors = ["Thomas Getgood <thomas@macroexpanse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
